--- a/mobile-ui/src/main/res/layout/fragment_dashboard.xml
+++ b/mobile-ui/src/main/res/layout/fragment_dashboard.xml
@@ -5,6 +5,7 @@
 
     <data>
         <import type="android.view.View"/>
+
         <variable
             name="ShowRecent"
             type="Boolean" />
@@ -103,6 +104,7 @@
 
 
             <com.google.android.material.card.MaterialCardView
+                app:rippleColor="@android:color/darker_gray"
                 android:id="@+id/button"
                 android:layout_width="0dp"
                 android:layout_height="52dp"
@@ -110,6 +112,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 app:cardCornerRadius="10dp"
+                android:visibility="@{ShowRecent ? View.VISIBLE : View.INVISIBLE}"
                 android:background="@drawable/button_background"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
