--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -22,6 +22,13 @@
         <item name="android:textAppearance">?attr/textAppearanceHeadline6</item>
     </style>
 
+    <style name="Widget.Akwukwo.LessonText" parent="">
+        <item name="android:textAlignment">center</item>
+        <item name="android:textAppearance">?attr/textAppearanceHeadline6</item>
+        <item name="android:ellipsize">end</item>
+        <item name="maxLines">2</item>
+    </style>
+
     <style name="Widget.Akwukwo.Toolbar" parent="Widget.MaterialComponents.Toolbar">
         <item name="navigationIcon">@drawable/ic_back</item>
         <item name="titleTextAppearance">@style/TextAppearance.Akwukwo.ToolbarTitle</item>
