--- a/mobile-ui/src/main/res/layout/fragment_chapters.xml
+++ b/mobile-ui/src/main/res/layout/fragment_chapters.xml
@@ -22,9 +22,11 @@
             app:layout_constraintTop_toTopOf="parent"
             app:title="Biology" />
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginStart="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
