Implemented the chapters and player DFM

--- a/mobile-ui/src/main/res/layout/layout_chapter_item.xml
+++ b/mobile-ui/src/main/res/layout/layout_chapter_item.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/chapters_rv"
+            android:id="@+id/lessons_rv"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginStart="16dp"
