--- a/mobile-ui/src/main/res/layout/layout_lesson_item.xml
+++ b/mobile-ui/src/main/res/layout/layout_lesson_item.xml
@@ -5,9 +5,14 @@
 
     <data>
 
+        <variable
+            name="lesson"
+            type="com.mobigods.presentation.models.LessonModel" />
+
     </data>
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/lessons_card"
         android:layout_width="200dp"
         android:layout_height="200dp"
         app:cardCornerRadius="15dp"
@@ -23,6 +28,7 @@
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="16dp"
+                android:scaleType="fitCenter"
                 app:layout_constraintDimensionRatio="w,16:9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -32,10 +38,13 @@
             <TextView
                 android:id="@+id/textView7"
                 style="@style/Widget.Akwukwo.LessonText"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="16dp"
+                android:text="@{lesson.name}"
+                android:textAlignment="center"
+                android:textStyle="normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
