--- a/player/src/main/res/layout/fragment_player.xml
+++ b/player/src/main/res/layout/fragment_player.xml
@@ -15,34 +15,32 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/materialToolbar2"
             android:layout_width="match_parent"
-            android:elevation="2dp"
+            android:elevation="1.01dp"
             android:layout_height="?attr/actionBarSize"
-            app:navigationIcon="@drawable/ic_back"
+            app:navigationIcon="@drawable/ic_back_white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-
 
 
         <com.google.android.exoplayer2.ui.StyledPlayerView
             android:id="@+id/player_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:elevation="2dp"
+            android:elevation="1dp"
             app:layout_constraintBottom_toTopOf="@+id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:show_buffering="when_playing"
-            app:show_shuffle_button="true" />
+            app:resize_mode="fixed_height"
+            app:show_buffering="when_playing" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.5" />
+            app:layout_constraintGuide_percent="0.35" />
 
         <TextView
             android:id="@+id/lesson_name"
