--- a/mobile-ui/src/main/res/layout/fragment_dashboard.xml
+++ b/mobile-ui/src/main/res/layout/fragment_dashboard.xml
@@ -131,6 +131,7 @@
 
 
                     <TextView
+                        android:id="@+id/button_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
